# Docking

./: .gitignore  AllAtomPosition.py  Compound_info_fetcher.py  Database_import.svl  Docking.py  Docking_master.py  Docking_script_1.py  Ligand.mol2  MANIFEST.in  Molecule.mol2  Molecule_builder.svl  Molecule_generation.py  PZ_II_028_A1_B1_24_clean.mol2  Protein.mol2  README.md  api_gold_UI.conf  db_AllAtomPosition.svl  db_Contacts.svl  db_Distance.svl  db_Import.svl  db_Position.svl  db_pro_contacts.svl  requirements.txt  setup.cfg
Docking/: AllAtomPosition.py  Docking.py  Docking_main.py  Docking_master.py  Docking_script.py  Molecule_generation.py  __init__.py
Docking/svl_scripts/: db_Contacts.svl  db_Import.svl
