[metadata]
name = docking
version = 0.0.2
author = Jure Fabjan
author_email = jure.fabjan93@gmail.com
description = Tools for streamlining the docking routine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JureFabjan/Docking
project_urls =
    Bug Tracker = https://github.com/JureFabjan/Docking/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.package_data]
'' = ['svl_scripts/**.*']

[options]
package_dir = 
    '' = '.'
packages = 
  Docking
include_package_data = True
